# wasm-dbms

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml\  README.md  cliff.toml  rust-toolchain.toml
crates/ic-dbms/example/: Cargo.toml
crates/ic-dbms/example/src/: lib.rs
crates/ic-dbms/ic-dbms-api/: Cargo.toml  README.md
crates/ic-dbms/ic-dbms-api/src/: error.rs  init.rs  lib.rs  prelude.rs  principal.rs  tests.rs
crates/ic-dbms/ic-dbms-canister/: Cargo.toml  README.md
crates/ic-dbms/ic-dbms-canister/benches/: eager_relation.rs  read_table.rs
crates/ic-dbms/ic-dbms-canister/src/: api.rs  dbms.rs  lib.rs  memory.rs  prelude.rs  tests.rs  utils.rs
crates/ic-dbms/ic-dbms-canister/src/api/: inspect.rs
crates/ic-dbms/ic-dbms-canister/src/dbms/: integrity.rs  join.rs  referenced_tables.rs  schema.rs  tests.rs  transaction.rs
crates/ic-dbms/ic-dbms-canister/src/dbms/integrity/: common.rs  update.rs
crates/ic-dbms/ic-dbms-canister/src/dbms/transaction/: overlay.rs  session.rs
crates/ic-dbms/ic-dbms-canister/src/memory/: provider.rs
crates/ic-dbms/ic-dbms-canister/src/tests/: message.rs  post.rs  user.rs
crates/ic-dbms/ic-dbms-canister/src/utils/: trap.rs
crates/ic-dbms/ic-dbms-client/: Cargo.toml  README.md
crates/ic-dbms/ic-dbms-client/examples/: client.rs
crates/ic-dbms/ic-dbms-client/src/: client.rs  errors.rs  lib.rs  prelude.rs  utils.rs
crates/ic-dbms/ic-dbms-client/src/client/: agent.rs  ic.rs  pocket_ic.rs
crates/ic-dbms/ic-dbms-macros/: Cargo.toml  README.md
crates/ic-dbms/ic-dbms-macros/src/: database_schema.rs  dbms_canister.rs  encode.rs  lib.rs  table.rs
crates/ic-dbms/ic-dbms-macros/src/database_schema/: metadata.rs
crates/ic-dbms/ic-dbms-macros/src/dbms_canister/: metadata.rs
crates/ic-dbms/ic-dbms-macros/src/table/: foreign_fetcher.rs  metadata.rs  record.rs  table_schema.rs  update.rs
crates/ic-dbms/integration-tests/dbms-canister-client-integration/: Cargo.toml
crates/ic-dbms/integration-tests/dbms-canister-client-integration/src/: lib.rs
crates/ic-dbms/integration-tests/pocket-ic-tests/: Cargo.toml
crates/ic-dbms/integration-tests/pocket-ic-tests-macro/: Cargo.toml
crates/ic-dbms/integration-tests/pocket-ic-tests-macro/src/: lib.rs
crates/ic-dbms/integration-tests/pocket-ic-tests/src/: actor.rs  agent.rs  client.rs  lib.rs  pocket_ic.rs  table.rs  wasm.rs
crates/ic-dbms/integration-tests/pocket-ic-tests/src/pocket_ic/: env.rs
crates/ic-dbms/integration-tests/pocket-ic-tests/tests/: acid.rs  acl.rs  agent_client.rs  aggregate.rs  crud.rs  custom_types.rs  granular_acl.rs  ic_dbms_canister_client.rs  integration_tests.rs  migrations.rs  select_raw.rs
crates/wasi-dbms/wasi-dbms-memory/: Cargo.toml  README.md
crates/wasi-dbms/wasi-dbms-memory/src/: lib.rs
crates/wasm-dbms/example/guest/: Cargo.toml
crates/wasm-dbms/example/guest/src/: file_provider.rs  lib.rs  schema.rs
crates/wasm-dbms/example/host/: Cargo.toml
crates/wasm-dbms/example/host/src/: main.rs
crates/wasm-dbms/wasm-dbms/: Cargo.toml  README.md
crates/wasm-dbms/wasm-dbms-api/: Cargo.toml  README.md
crates/wasm-dbms/wasm-dbms-api/src/: caller_context.rs  dbms.rs  error.rs  lib.rs  memory.rs  prelude.rs  tests.rs  utils.rs
crates/wasm-dbms/wasm-dbms-api/src/dbms/: acl.rs  autoincrement.rs  custom_value.rs  database.rs  foreign_fetcher.rs  migration.rs  query.rs  sanitize.rs  table.rs  transaction.rs  types.rs  validate.rs  value.rs
crates/wasm-dbms/wasm-dbms-api/src/dbms/query/: aggregate.rs  builder.rs  delete.rs  filter.rs  join.rs
crates/wasm-dbms/wasm-dbms-api/src/dbms/sanitize/: clamp.rs  collapse_whitespace.rs  lowercase.rs  null_if_empty.rs  round_to_scale.rs  slug_sanitizer.rs  timezone.rs  trim.rs  uppercase.rs  url_encoding.rs
crates/wasm-dbms/wasm-dbms-api/src/dbms/table/: column_def.rs  record.rs  schema.rs
crates/wasm-dbms/wasm-dbms-api/src/dbms/types/: blob.rs  boolean.rs  date.rs  datetime.rs  decimal.rs  integers.rs  json.rs  nullable.rs  text.rs  uuid.rs
crates/wasm-dbms/wasm-dbms-api/src/dbms/validate/: case.rs  color.rs  email.rs  locale.rs  phone.rs  strlen.rs  web.rs
crates/wasm-dbms/wasm-dbms-api/src/dbms/value/: discriminant.rs
crates/wasm-dbms/wasm-dbms-api/src/memory/: encode.rs  error.rs
crates/wasm-dbms/wasm-dbms-bench/: Cargo.toml
crates/wasm-dbms/wasm-dbms-bench/benches/: compare.rs
crates/wasm-dbms/wasm-dbms-bench/src/: data.rs  lib.rs  provider.rs  schema.rs  setup.rs
crates/wasm-dbms/wasm-dbms-macros/: Cargo.toml  README.md
crates/wasm-dbms/wasm-dbms-macros/src/: custom_data_type.rs  database_schema.rs  encode.rs  lib.rs  table.rs  utils.rs
crates/wasm-dbms/wasm-dbms-macros/src/database_schema/: metadata.rs
crates/wasm-dbms/wasm-dbms-macros/src/table/: foreign_fetcher.rs  insert.rs  metadata.rs  record.rs  table_schema.rs  update.rs
crates/wasm-dbms/wasm-dbms-memory/: Cargo.toml  README.md
crates/wasm-dbms/wasm-dbms-memory/src/: acl.rs  lib.rs  memory_access.rs  memory_manager.rs  provider.rs  schema_registry.rs  table_registry.rs  unclaimed_pages.rs
crates/wasm-dbms/wasm-dbms-memory/src/acl/: list.rs  no_acl.rs  traits.rs
crates/wasm-dbms/wasm-dbms-memory/src/table_registry/: autoincrement_ledger.rs  free_segments_ledger.rs  index_ledger.rs  page_ledger.rs  raw_record.rs  raw_table_reader.rs  record_address.rs  schema_snapshot_ledger.rs  table_reader.rs  write_at.rs
crates/wasm-dbms/wasm-dbms-memory/src/table_registry/autoincrement_ledger/: registry.rs
crates/wasm-dbms/wasm-dbms-memory/src/table_registry/free_segments_ledger/: free_segment.rs  free_segments_table.rs  pages_table.rs  tables_iter.rs
crates/wasm-dbms/wasm-dbms/src/: context.rs  database.rs  integrity.rs  join.rs  lib.rs  referenced_tables.rs  schema.rs  transaction.rs
crates/wasm-dbms/wasm-dbms/src/database/: aggregate.rs  filter_analyzer.rs  index_reader.rs  migration.rs  tests.rs
crates/wasm-dbms/wasm-dbms/src/integrity/: common.rs  insert.rs  update.rs
crates/wasm-dbms/wasm-dbms/src/transaction/: journal.rs  overlay.rs  session.rs
docs/: SUMMARY.md  _config.yml  (+2 more)
(+109 files in other folders)
