[workspace]
members = [
  "crates/ic-dbms/example",
  "crates/ic-dbms/ic-dbms-api",
  "crates/ic-dbms/ic-dbms-canister",
  "crates/ic-dbms/ic-dbms-client",
  "crates/ic-dbms/ic-dbms-macros",
  "crates/ic-dbms/integration-tests/dbms-canister-client-integration",
  "crates/ic-dbms/integration-tests/pocket-ic-tests",
  "crates/ic-dbms/integration-tests/pocket-ic-tests-macro",
  "crates/wasi-dbms/wasi-dbms-memory",
  "crates/wasm-dbms/wasm-dbms-api",
  "crates/wasm-dbms/wasm-dbms-memory",
  "crates/wasm-dbms/wasm-dbms",
  "crates/wasm-dbms/wasm-dbms-macros",
  "crates/wasm-dbms/wasm-dbms-bench",
  "crates/wasm-dbms/example/guest",
  "crates/wasm-dbms/example/host",
]
resolver = "3"

[workspace.package]
version = "0.8.1"
edition = "2024"
rust-version = "1.91.1"
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
repository = "https://github.com/veeso/wasm-dbms"
license = "MIT"
keywords = ["ic", "dbms", "canister", "database", "async"]
categories = ["database", "network-programming", "wasm"]

[workspace.dependencies]
candid = { version = "0.10", features = ["value"] }
criterion = "0.8"
getrandom = { version = "0.4", default-features = false }
ic-agent = "0.47"
ic-cdk = "0.20"
ic-cdk-macros = "0.20"
lazy-regex = "3"
percent-encoding = "2"
pocket-ic = "13"
proc-macro2 = "1"
quote = "1"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = "2"
thiserror = "2"
url = "2"
uuid = { version = "1", default-features = false, features = [
  "v7",
  "rng-getrandom",
] }
