[workspace]
members = [
  "crates/ic-dbms/example",
  "crates/ic-dbms/ic-dbms-api",
  "crates/ic-dbms/ic-dbms-canister",
  "crates/ic-dbms/ic-dbms-client",
  "crates/ic-dbms/ic-dbms-macros",
  "crates/ic-dbms/integration-tests/dbms-canister-client-integration",
  "crates/ic-dbms/integration-tests/pocket-ic-tests",
  "crates/wasi-dbms/wasi-dbms-memory",
  "crates/wasm-dbms/wasm-dbms-api",
  "crates/wasm-dbms/wasm-dbms-memory",
  "crates/wasm-dbms/wasm-dbms",
  "crates/wasm-dbms/wasm-dbms-macros",
  "crates/wasm-dbms/wasm-dbms-bench",
  "crates/wasm-dbms/example/guest",
  "crates/wasm-dbms/example/host",
]
resolver = "3"

[workspace.package]
version = "0.9.0"
edition = "2024"
rust-version = "1.91.1"
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
repository = "https://github.com/veeso/wasm-dbms"
license = "MIT"
keywords = ["ic", "dbms", "canister", "database", "async"]
categories = ["database", "network-programming", "wasm"]

[workspace.dependencies]
anyhow = "1"
bitflags = { version = "2", features = ["serde"] }
candid = { version = "0.10", features = ["value"] }
criterion = "0.8"
duckdb = { version = "1", features = ["bundled"] }
flate2 = "1"
getrandom = { version = "0.4", default-features = false }
ic-agent = "0.47"
ic-cdk = "0.20"
ic-cdk-macros = "0.20"
ic-dbms-api = { version = "0.9", path = "crates/ic-dbms/ic-dbms-api" }
ic-dbms-canister = { version = "0.9", path = "crates/ic-dbms/ic-dbms-canister" }
ic-dbms-client = { version = "0.9", path = "crates/ic-dbms/ic-dbms-client" }
ic-dbms-macros = { version = "0.9", path = "crates/ic-dbms/ic-dbms-macros" }
lazy-regex = "3"
percent-encoding = "2"
pocket-ic = "13"
pocket-ic-harness = "0.2"
proc-macro2 = "1"
quote = "1"
rand = "0.10"
reqwest = "0.13"
rusqlite = { version = "0.39", features = ["bundled"] }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
url = "2"
uuid = { version = "1", default-features = false, features = [
  "v7",
  "rng-getrandom",
] }
wasm-dbms = { version = "0.9", path = "crates/wasm-dbms/wasm-dbms" }
wasm-dbms-api = { version = "0.9", path = "crates/wasm-dbms/wasm-dbms-api" }
wasm-dbms-macros = { version = "0.9", path = "crates/wasm-dbms/wasm-dbms-macros" }
wasm-dbms-memory = { version = "0.9", path = "crates/wasm-dbms/wasm-dbms-memory" }
wasmtime = { version = "44", features = ["component-model"] }
wasmtime-wasi = "44"
wit-bindgen = { version = "0.57", default-features = false, features = [
  "macros",
  "realloc",
] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
