[package]
name = "example"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Example ic-dbms-canister instance."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-dbms-api = { workspace = true }
ic-dbms-canister = { workspace = true }
serde = { workspace = true }
wasm-dbms = { workspace = true }
wasm-dbms-api = { workspace = true }
wasm-dbms-memory = { workspace = true }
