[package]
name = "ic-dbms-api"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }
documentation = "https://docs.rs/ic-dbms-api/"
description = "Public API types for ic-dbms-canister. This crate provides shared types for interacting and implementing the ic-dbms-canister."
include = [
  "examples/**/*",
  "src/**/*",
  "../../../LICENSE",
  "README.md",
  "../../../CHANGELOG.md",
]
readme = "README.md"

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-dbms-macros = { version = "0.7", path = "../ic-dbms-macros" }
serde = { workspace = true }
wasm-dbms-api = { version = "0.7", path = "../../wasm-dbms/wasm-dbms-api", features = ["candid"] }
