[package]
name = "ic-dbms-client"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }
documentation = "https://docs.rs/ic-dbms-client/"
description = "ic-dbms-canister client library for interacting with the ic-dbms-canister."
include = [
  "examples/**/*",
  "src/**/*",
  "../../../LICENSE",
  "README.md",
  "../../../CHANGELOG.md",
]
readme = "README.md"

[dependencies]
candid = { workspace = true }
ic-agent = { workspace = true, optional = true }
ic-cdk = { workspace = true }
ic-dbms-api = { version = "0.6", path = "../ic-dbms-api" }
pocket-ic = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
ic-agent = ["dep:ic-agent"]
pocket-ic = ["dep:pocket-ic"]

[[example]]
name = "client"
path = "examples/client.rs"

[package.metadata.docs.rs]
features = ["ic-agent", "pocket-ic"]
rustdoc-args = ["--cfg", "docsrs"]
