[package]
name = "wasm-dbms-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
criterion = { workspace = true }
duckdb = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true }
wasm-dbms = { workspace = true }
wasm-dbms-api = { workspace = true }
wasm-dbms-macros = { workspace = true }
wasm-dbms-memory = { workspace = true }

[[bench]]
name = "compare"
harness = false
