[package]
name = "wasm-dbms-memory"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Memory abstraction and page management for the wasm-dbms framework"
license = { workspace = true }
repository = { workspace = true }
readme = "README.md"
rust-version = { workspace = true }
documentation = "https://docs.rs/wasm-dbms-memory"
categories = ["database", "wasm"]
keywords = ["database", "wasm", "memory"]
include = [
  "src/**/*",
  "../../../LICENSE",
  "README.md",
  "../../../CHANGELOG.md",
]

[dependencies]
wasm-dbms-api = { path = "../wasm-dbms-api", version = "0.7" }

[dev-dependencies]
candid = { workspace = true }
serde = { workspace = true }
