[package]
name = "wasm-dbms"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Runtime-agnostic DBMS engine for WASM environments"
license = { workspace = true }
repository = { workspace = true }
readme = "README.md"
rust-version = { workspace = true }
documentation = "https://docs.rs/wasm-dbms"
categories = ["database", "wasm"]
keywords = ["database", "wasm", "dbms"]
include = ["src/**/*", "../../../LICENSE", "README.md", "../../../CHANGELOG.md"]

[dependencies]
wasm-dbms-api = { workspace = true }
wasm-dbms-memory = { workspace = true }

[dev-dependencies]
candid = { workspace = true }
serde = { workspace = true }
wasm-dbms-macros = { workspace = true }
