[package]
name = "dbms-canister-client-integration"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "integration tests for the IcDbmsCanisterClient"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-dbms-api = { workspace = true }
ic-dbms-client = { workspace = true }
serde = { workspace = true }
wasm-dbms-api = { workspace = true }
