[package]
name = "pocket-ic-tests-macro"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "pocket-test macro for testing with the pocket ic context"
publish = false

[lib]
name = "pocket_ic_tests_macro"
path = "src/lib.rs"
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
