[package]
name = "pocket-ic-tests"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "integration tests for ic-dbms-canister"
publish = false

[dependencies]
anyhow = "1"
candid = { workspace = true }
flate2 = "1"
ic-agent = { workspace = true }
ic-dbms-api = { path = "../../ic-dbms-api" }
ic-dbms-client = { path = "../../ic-dbms-client", features = ["ic-agent", "pocket-ic"] }
pocket-ic = { workspace = true }
reqwest = { version = "0.13" }
serde = { workspace = true }
tokio = { version = "1", features = ["full"] }
url = { workspace = true }
wasm-dbms-api = { path = "../../../wasm-dbms/wasm-dbms-api" }

[dev-dependencies]
pocket-ic-tests-macro = { path = "../pocket-ic-tests-macro" }
