[package]
name = "pocket-ic-tests"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "integration tests for ic-dbms-canister"
publish = false

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
flate2 = { workspace = true }
ic-agent = { workspace = true }
ic-dbms-api = { workspace = true }
ic-dbms-client = { workspace = true, features = ["ic-agent", "pocket-ic"] }
pocket-ic = { workspace = true }
pocket-ic-harness = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
wasm-dbms-api = { workspace = true }
