[package]
name = "wasm-dbms-example-guest"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "WIT Component Model guest example for wasm-dbms"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rust_decimal = { workspace = true }
serde_json = { workspace = true }
wasm-dbms = { workspace = true }
wasm-dbms-api = { workspace = true }
wasm-dbms-memory = { workspace = true }
wit-bindgen = { workspace = true }
